@@ -125,8 +125,8 @@ int(0)
 int(3)
 bool(false)
 ===S:10,C===
-int(-1)
-bool(false)
+int(0)
+int(13)
 bool(false)
 ===S:-1,E===
 int(0)
@@ -137,6 +137,6 @@ int(0)
 int(6)
 bool(false)
 ===S:1,E===
-int(-1)
-bool(false)
+int(0)
+int(7)
 bool(false)
