@@ -49,11 +49,17 @@ static ssize_t php_stream_memory_write(php_stream *stream, const char *buf, size
 
 	if (ms->mode & TEMP_STREAM_READONLY) {
 		return (ssize_t) -1;
-	} else if (ms->mode & TEMP_STREAM_APPEND) {
-		ms->fpos = ZSTR_LEN(ms->data);
 	}
-	if (ms->fpos + count > ZSTR_LEN(ms->data)) {
+	size_t data_len = ZSTR_LEN(ms->data);
+	if (ms->mode & TEMP_STREAM_APPEND) {
+		ms->fpos = data_len;
+	}
+	if (ms->fpos + count > data_len) {
 		ms->data = zend_string_realloc(ms->data, ms->fpos + count, 0);
+		if (ms->fpos > data_len) {
+			/* zero the bytes added due to seek past end position */
+			memset(ZSTR_VAL(ms->data) + data_len, 0, ms->fpos - data_len);
+		}
 	} else {
 		ms->data = zend_string_separate(ms->data, 0);
 	}
@@ -73,7 +79,7 @@ static ssize_t php_stream_memory_read(php_stream *stream, char *buf, size_t coun
 	php_stream_memory_data *ms = (php_stream_memory_data*)stream->abstract;
 	assert(ms != NULL);
 
-	if (ms->fpos == ZSTR_LEN(ms->data)) {
+	if (ms->fpos >= ZSTR_LEN(ms->data)) {
 		stream->eof = 1;
 		count = 0;
 	} else {
@@ -132,20 +138,14 @@ static int php_stream_memory_seek(php_stream *stream, zend_off_t offset, int whe
 					return 0;
 				}
 			} else {
-				if (ms->fpos + (size_t)(offset) > ZSTR_LEN(ms->data)) {
-					ms->fpos = ZSTR_LEN(ms->data);
-					*newoffs = -1;
-					return -1;
-				} else {
-					ms->fpos = ms->fpos + offset;
-					*newoffs = ms->fpos;
-					stream->eof = 0;
-					return 0;
-				}
+				stream->eof = 0;
+				ms->fpos = ms->fpos + offset;
+				*newoffs = ms->fpos;
+				return 0;
 			}
 		case SEEK_SET:
-			if (ZSTR_LEN(ms->data) < (size_t)(offset)) {
-				ms->fpos = ZSTR_LEN(ms->data);
+			if (offset < 0) {
+				ms->fpos = 0;
 				*newoffs = -1;
 				return -1;
 			} else {
@@ -156,9 +156,10 @@ static int php_stream_memory_seek(php_stream *stream, zend_off_t offset, int whe
 			}
 		case SEEK_END:
 			if (offset > 0) {
-				ms->fpos = ZSTR_LEN(ms->data);
-				*newoffs = -1;
-				return -1;
+				ms->fpos = ZSTR_LEN(ms->data) + offset;
+				*newoffs = ms->fpos;
+				stream->eof = 0;
+				return 0;
 			} else if (ZSTR_LEN(ms->data) < (size_t)(-offset)) {
 				ms->fpos = 0;
 				*newoffs = -1;
